# CourseReviewClassifier

./: EDA.ipynb  README.md  TaskList.md  main.py  model.py  pyproject.toml  testing.ipynb
