[project]
name = "coursereviewclassifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "transformers>=4.57.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
